<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>astora_lights</name>
  <version>0.0.0</version>
  <description>ROS2 package for interfacing one or multiple ASTORA soft panels via DMX</description>
  <maintainer email="karoline@heiwolt.de">Karoline Heiwolt</maintainer>
  <license>MIT License, Copyright 2023 Karoline Heiwolt</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
